Criação de categorias

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <img src="./img/me.svg" alt="">
         </nav>
 
-    <main class="container">
+    <main class="container1">
 
 
         <h1>Escolha seu prato</h1>
-        <div class="teste">
+        <div class="categoria1">
     <div class="pratos">
         <img src="./img/Strogonoff.jpeg" alt="">
         <div class="titulo">Strogonoff</div>
@@ -64,100 +64,113 @@
 
 </main>
 
-<h1>Escolha sua bebida</h1>
+<main class="container2">
 
-<main class="container">
+    <h1>Escolha sua bebida</h1>
+    <div class="categoria2">
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
     </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
+
+    <div class="bebidas">
+        <img src="./img/Coca.png" alt="">
+        <div class="titulo">Coca Cola</div>
+        <div class="descricao">Lata 220ml</div>
+        <div class="valor">R$ 3,00</div>
+    </div>  
+    </div>
 
 </main>
 
-<h1>Escolha sua sobremesa</h1>
 
-<main class="container">
+<main class="container3">
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
+    <h1>Escolha sua sobremesa</h1>
+
+    <div class="categoria3">
+
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
     </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
+    </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
+    </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
+    </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
+    </div>    
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
-
+    <div class="sobremesas">
+        <img src="./img/bolo.jpg" alt="">
+        <div class="titulo">Torta Holandesa</div>
+        <div class="descricao">Torta holandesa - fatia</div>
+        <div class="valor">R$ 9,90</div>
+    </div>    
+      
+    </div>
 </main>
 
 </body>
