adição de rodapé e confirmação do pedido

--- a/index.html
+++ b/index.html
@@ -173,5 +173,20 @@
     </div>
 </main>
 
+<footer>
+    <div class="botao">Selecione 1 item de cada categoria</div>
+</footer>
+
+<div class="resumo hide">
+    <h1 class="ctf">CodeTimeFood</h1>  
+    <h3 class="res">Seu pedido: </h3>
+    <h3 class="res">Sua bebida: </h3>
+    <h3 class="res">Sua Sobremesa: </h3>
+
+    <div class="confirm">Fazer Pedido</div>
+
+
+</div>
+
 </body>
 </html>
