atualização dos pratos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 
         <h1>Escolha seu prato</h1>
         <div class="categoria1">
+            <div class="pratos">
+                <img src="./img/frango.jpg" alt="">
+                <div class="titulo">Frango Empanado</div>
+                <div class="descricao">Delicioso frango empanado com arroz, feijão e couve</div>
+                <div class="valor">R$ 19,90</div>
+            </div>   
+        
+            <div class="pratos">
+                <img src="./img/bisteca.jpg" alt="">
+                <div class="titulo">Bisteca ao limão</div>
+                <div class="descricao">Deliciosa bisteca ao limão com com arroz, feijão e couve</div>
+                <div class="valor">R$ 19,90</div>
+            </div>   
+
     <div class="pratos">
         <img src="./img/Strogonoff.jpeg" alt="">
         <div class="titulo">Strogonoff</div>
@@ -27,39 +41,26 @@
     </div>    
 
     <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
+        <img src="./img/calabresa.jpeg" alt="">
+        <div class="titulo">Calabresa</div>
+        <div class="descricao">linguiça acebolada com, arroz, feijão, salada e fritas</div>
         <div class="valor">R$ 23,90</div>
     </div>   
 
     <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
+        <img src="./img/file.jpg" alt="">
+        <div class="titulo">Filé com Fritas</div>
+        <div class="descricao">Arroz, Feijão, Bife, Batata frita, Tomate e Alface</div>
+        <div class="valor">R$ 26,90</div>
     </div>   
 
     <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
+        <img src="./img/bife.jpg" alt="">
+        <div class="titulo">Bife a Cavalo</div>
+        <div class="descricao">Arroz, Feijão, Bife, Ovo e Batata frita</div>
+        <div class="valor">R$ 26,90</div>
     </div>   
 
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
-
-    <div class="pratos">
-        <img src="./img/Strogonoff.jpeg" alt="">
-        <div class="titulo">Strogonoff</div>
-        <div class="descricao">Strogonoff de frango com arroz e batata palha</div>
-        <div class="valor">R$ 23,90</div>
-    </div>   
 </div>
 
 </main>
@@ -72,51 +73,46 @@
     <div class="bebidas">
         <img src="./img/Coca.png" alt="">
         <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <div class="descricao">Lata 350ml</div>
+        <div class="valor">R$ 5,00</div>
     </div>    
 
     <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <img src="./img/guarana.jpg" alt="">
+        <div class="titulo">Guarná Antŕtica</div>
+        <div class="descricao">Lata 350ml</div>
+        <div class="valor">R$ 5,00</div>
     </div>  
 
     <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <img src="./img/fanta.jpeg" alt="">
+        <div class="titulo">Fanta Laranja</div>
+        <div class="descricao">Lata 350ml</div>
+        <div class="valor">R$ 5,00</div>
     </div>  
 
     <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <img src="./img/laranja.jpg" alt="">
+        <div class="titulo">Suco Natural</div>
+        <div class="descricao">Suco de Laranja</div>
+        <div class="valor">R$ 7,00</div>
     </div>  
 
     <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <img src="./img/limao.png" alt="">
+        <div class="titulo">Suco Natural</div>
+        <div class="descricao">Suco de Limão</div>
+        <div class="valor">R$ 7,00</div>
     </div>  
 
     <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
+        <img src="./img/maracuja.jpeg" alt="">
+        <div class="titulo">Suco Natural</div>
+        <div class="descricao">Suco de maracujá</div>
+        <div class="valor">R$ 7,00</div>
     </div>  
 
-    <div class="bebidas">
-        <img src="./img/Coca.png" alt="">
-        <div class="titulo">Coca Cola</div>
-        <div class="descricao">Lata 220ml</div>
-        <div class="valor">R$ 3,00</div>
-    </div>  
+
     </div>
 
 </main>
@@ -126,13 +122,20 @@
 
     <h1>Escolha sua sobremesa</h1>
 
-    <div class="categoria3">
+    <div class="categoria3">   
 
     <div class="sobremesas">
-        <img src="./img/bolo.jpg" alt="">
-        <div class="titulo">Torta Holandesa</div>
-        <div class="descricao">Torta holandesa - fatia</div>
-        <div class="valor">R$ 9,90</div>
+        <img src="./img/mousse.jpg" alt="">
+        <div class="titulo">Mousse</div>
+        <div class="descricao">Mousse de limão</div>
+        <div class="valor">R$ 4,90</div>
+    </div>    
+
+    <div class="sobremesas">
+        <img src="./img/pudim.jpg" alt="">
+        <div class="titulo">Pudim</div>
+        <div class="descricao">Pudim de leite condensado - fatia</div>
+        <div class="valor">R$ 6,90</div>
     </div>    
 
     <div class="sobremesas">
@@ -140,34 +143,27 @@
         <div class="titulo">Torta Holandesa</div>
         <div class="descricao">Torta holandesa - fatia</div>
         <div class="valor">R$ 9,90</div>
+    </div> 
+
+    <div class="sobremesas">
+        <img src="./img/tiramisu.jpeg" alt="">
+        <div class="titulo">Tiramisu</div>
+        <div class="descricao">Tiramisu Com Biscoitos E Creme De Mascarpone</div>
+        <div class="valor">R$ 12,90</div>
     </div>    
 
     <div class="sobremesas">
-        <img src="./img/bolo.jpg" alt="">
-        <div class="titulo">Torta Holandesa</div>
-        <div class="descricao">Torta holandesa - fatia</div>
-        <div class="valor">R$ 9,90</div>
+        <img src="./img/petit.jpeg" alt="">
+        <div class="titulo">Petit Gateau</div>
+        <div class="descricao">Petit Gateau com sorvete de baunilha</div>
+        <div class="valor">R$ 12,90</div>
     </div>    
 
     <div class="sobremesas">
-        <img src="./img/bolo.jpg" alt="">
-        <div class="titulo">Torta Holandesa</div>
-        <div class="descricao">Torta holandesa - fatia</div>
-        <div class="valor">R$ 9,90</div>
-    </div>    
-
-    <div class="sobremesas">
-        <img src="./img/bolo.jpg" alt="">
-        <div class="titulo">Torta Holandesa</div>
-        <div class="descricao">Torta holandesa - fatia</div>
-        <div class="valor">R$ 9,90</div>
-    </div>    
-
-    <div class="sobremesas">
-        <img src="./img/bolo.jpg" alt="">
-        <div class="titulo">Torta Holandesa</div>
-        <div class="descricao">Torta holandesa - fatia</div>
-        <div class="valor">R$ 9,90</div>
+        <img src="./img/panna.jpg" alt="">
+        <div class="titulo">Panna Cotta</div>
+        <div class="descricao">Panna Cotta com cobertura de framboesa</div>
+        <div class="valor">R$ 12,90</div>
     </div>    
       
     </div>
