--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
       <h3 class="dri"></h3>
       <h3 class="sob"></h3>
 
-      <div class="confirm">Fazer Pedido</div>
-    </div>
+      <a class="confirm" href="https://wa.me/5511949472627?text=Olá, Gostaria de confirmar meu pedido!">Fazer Pedido</a>
+    </div>  
 
     <script src="JS/app.js"></script>
   </body>
