--- a/index.html
+++ b/index.html
@@ -16,56 +16,56 @@
       <main class="container1">
         <h1>Escolha seu prato</h1>
         <div class="categoria1">
-          <div onclick="teste('empanado',19,90)" class="pratos empanado">
+          <div onclick="teste('empanado',19.99)" class="pratos empanado">
             <img src="./img/frango.jpg" alt="" />
             <div class="titulo">Frango Empanado</div>
             <div class="descricao">
               Frango empanado com arroz, feijão e couve
             </div>
-            <div class="valor">R$ 19,90</div>
+            <div class="valor">R$ 19,99</div>
           </div>
 
-          <div onclick="teste('bisteca',19,90)" class="pratos bisteca">
+          <div onclick="teste('bisteca',19.99)" class="pratos bisteca">
             <img src="./img/bisteca.jpg" alt="" />
             <div class="titulo">Bisteca ao limão</div>
             <div class="descricao">
               Bisteca ao limão com com arroz, feijão e couve
             </div>
-            <div class="valor">R$ 19,90</div>
+            <div class="valor">R$ 19,99</div>
           </div>
 
-          <div onclick="teste('strogonoff',23,90)" class="pratos strogonoff">
+          <div onclick="teste('strogonoff',23.99)" class="pratos strogonoff">
             <img src="./img/Strogonoff.jpeg" alt="" />
             <div class="titulo">Strogonoff</div>
             <div class="descricao">
               Strogonoff de frango com arroz e batata palha
             </div>
-            <div class="valor">R$ 23,90</div>
+            <div class="valor">R$ 23,99</div>
           </div>
 
-          <div onclick="teste('calabresa',23,90)" class="pratos calabresa">
+          <div onclick="teste('calabresa',23.99)" class="pratos calabresa">
             <img src="./img/calabresa.jpeg" alt="" />
             <div class="titulo">Calabresa</div>
             <div class="descricao">
               linguiça acebolada com, arroz, feijão, salada e fritas
             </div>
-            <div class="valor">R$ 23,90</div>
+            <div class="valor">R$ 23,99</div>
           </div>
 
-          <div onclick="teste('file',26,90)" class="pratos file">
+          <div onclick="teste('file',26.99)" class="pratos file">
             <img src="./img/file.jpg" alt="" />
             <div class="titulo">Filé com Fritas</div>
             <div class="descricao">
               Arroz, Feijão, Bife, Batata frita, Tomate e Alface
             </div>
-            <div class="valor">R$ 26,90</div>
+            <div class="valor">R$ 26,99</div>
           </div>
 
-          <div onclick="teste('bife',26,90)" class="pratos bife">
+          <div onclick="teste('bife',26.99)" class="pratos bife">
             <img src="./img/bife.jpg" alt="" />
             <div class="titulo">Bife a Cavalo</div>
             <div class="descricao">Arroz, Feijão, Bife, Ovo e Batata frita</div>
-            <div class="valor">R$ 26,90</div>
+            <div class="valor">R$ 26,99</div>
           </div>
         </div>
       </main>
@@ -73,46 +73,46 @@
       <main class="container2">
         <h1>Escolha sua bebida</h1>
         <div class="categoria2">
-          <div onclick="drink('coca',4,99)" class="bebidas coca">
+          <div onclick="drink('coca',4.99)" class="bebidas coca">
             <img src="./img/Coca.png" alt="" />
             <div class="titulo">Coca Cola</div>
             <div class="descricao">Lata 350ml</div>
             <div class="valor">R$ 4,99</div>
           </div>
 
-          <div onclick="drink('guarana',4,99)" class="bebidas guarana">
+          <div onclick="drink('guarana',4.99)" class="bebidas guarana">
             <img src="./img/guarana.jpg" alt="" />
             <div class="titulo">Guarná Antŕtica</div>
             <div class="descricao">Lata 350ml</div>
             <div class="valor">R$ 4,99</div>
           </div>
 
-          <div onclick="drink('fanta',4,99)" class="bebidas fanta">
+          <div onclick="drink('fanta',4.99)" class="bebidas fanta">
             <img src="./img/fanta.jpeg" alt="" />
             <div class="titulo">Fanta Laranja</div>
             <div class="descricao">Lata 350ml</div>
             <div class="valor">R$ 4,99</div>
           </div>
 
-          <div onclick="drink('laranja',6,90)" class="bebidas laranja">
+          <div onclick="drink('laranja',6.99)" class="bebidas laranja">
             <img src="./img/laranja.jpg" alt="" />
             <div class="titulo">Suco Natural</div>
             <div class="descricao">Suco de Laranja</div>
-            <div class="valor">R$ 6,90</div>
+            <div class="valor">R$ 6,99</div>
           </div>
 
-          <div onclick="drink('limao',6,90)" class="bebidas limao">
+          <div onclick="drink('limao',6.99)" class="bebidas limao">
             <img src="./img/limao.png" alt="" />
             <div class="titulo">Suco Natural</div>
             <div class="descricao">Suco de Limão</div>
-            <div class="valor">R$ 6,90</div>
+            <div class="valor">R$ 6,99</div>
           </div>
 
-          <div onclick="drink('maracuja',6,90)" class="bebidas maracuja">
+          <div onclick="drink('maracuja',6.99)" class="bebidas maracuja">
             <img src="./img/maracuja.jpeg" alt="" />
             <div class="titulo">Suco Natural</div>
             <div class="descricao">Suco de maracujá</div>
-            <div class="valor">R$ 6,90</div>
+            <div class="valor">R$ 6,99</div>
           </div>
         </div>
       </main>
@@ -121,48 +121,48 @@
         <h1>Escolha sua sobremesa</h1>
 
         <div class="categoria3">
-          <div onclick="sobreMesa('mousse',4,90)" class="sobremesas mousse">
+          <div onclick="sobreMesa('mousse',4.99)" class="sobremesas mousse">
             <img src="./img/mousse.jpg" alt="" />
             <div class="titulo">Mousse</div>
             <div class="descricao">Mousse de limão</div>
-            <div class="valor">R$ 4,90</div>
+            <div class="valor">R$ 4,99</div>
           </div>
 
-          <div onclick="sobreMesa('pudim',6,90)" class="sobremesas pudim">
+          <div onclick="sobreMesa('pudim',6.99)" class="sobremesas pudim">
             <img src="./img/pudim.jpg" alt="" />
             <div class="titulo">Pudim</div>
             <div class="descricao">Pudim de leite condensado - fatia</div>
-            <div class="valor">R$ 6,90</div>
+            <div class="valor">R$ 6,99</div>
           </div>
 
-          <div onclick="sobreMesa('bolo',9,90)" class="sobremesas bolo">
+          <div onclick="sobreMesa('bolo',9.99)" class="sobremesas bolo">
             <img src="./img/bolo.jpg" alt="" />
             <div class="titulo">Torta Holandesa</div>
             <div class="descricao">Torta holandesa - fatia</div>
-            <div class="valor">R$ 9,90</div>
+            <div class="valor">R$ 9,99</div>
           </div>
 
-          <div onclick="sobreMesa('tiramisu',12,90)" class="sobremesas tiramisu">
+          <div onclick="sobreMesa('tiramisu',12.99)" class="sobremesas tiramisu">
             <img src="./img/tiramisu.jpeg" alt="" />
             <div class="titulo">Tiramisu</div>
             <div class="descricao">
               Tiramisu Com Biscoitos E Creme De Mascarpone
             </div>
-            <div class="valor">R$ 12,90</div>
+            <div class="valor">R$ 12,99</div>
           </div>
 
-          <div onclick="sobreMesa('petit',12,90)" class="sobremesas petit">
+          <div onclick="sobreMesa('petit',12.99)" class="sobremesas petit">
             <img src="./img/petit.jpeg" alt="" />
             <div class="titulo">Petit Gateau</div>
             <div class="descricao">Petit Gateau com sorvete de baunilha</div>
-            <div class="valor">R$ 12,90</div>
+            <div class="valor">R$ 12,99</div>
           </div>
 
-          <div onclick="sobreMesa('panna',12,90)" class="sobremesas panna">
+          <div onclick="sobreMesa('panna',12.99)" class="sobremesas panna">
             <img src="./img/panna.jpg" alt="" />
             <div class="titulo">Panna Cotta</div>
             <div class="descricao">Panna Cotta com cobertura de framboesa</div>
-            <div class="valor">R$ 12,90</div>
+            <div class="valor">R$ 12,99</div>
           </div>
         </div>
       </main>
@@ -178,7 +178,7 @@
       <h3 class="dri"></h3>
       <h3 class="sob"></h3>
 
-      <a class="confirm" href="https://wa.me/5511949472627?text=Olá, Gostaria de confirmar meu pedido!">Fazer Pedido</a>
+      <a class="confirm" onclick="direcionarProWhatsapp()">Fazer Pedido</a>
     </div>  
 
     <script src="JS/app.js"></script>
