--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>CodetimeFood</title>
   </head>
   <body>
-    <div class="estrutura">
+    <main class="estrutura">
       <nav>
         <img src="./img/logo.png" alt="" />
         <img src="./img/me.svg" alt="" />
       </nav>
 
-      <main class="container1">
+      <div class="container1">
         <h1>Escolha seu prato</h1>
         <div class="categoria1">
           <div onclick="teste('empanado',19.99)" class="pratos empanado">
@@ -68,9 +68,9 @@
             <div class="valor">R$ 26,99</div>
           </div>
         </div>
-      </main>
+      </div>
 
-      <main class="container2">
+      <div class="container2">
         <h1>Escolha sua bebida</h1>
         <div class="categoria2">
           <div onclick="drink('coca',4.99)" class="bebidas coca">
@@ -115,9 +115,9 @@
             <div class="valor">R$ 6,99</div>
           </div>
         </div>
-      </main>
+      </div>
 
-      <main class="container3">
+      <div class="container3">
         <h1>Escolha sua sobremesa</h1>
 
         <div class="categoria3">
@@ -165,12 +165,12 @@
             <div class="valor">R$ 12,99</div>
           </div>
         </div>
-      </main>
+      </div>
 
       <footer>
         <div onclick="avancarPagina()" class="botao">Selecione 1 item de cada categoria</div>
       </footer>
-    </div>
+    </main>
 
     <div class="resumo hide">
       <h1 class="ctf">CodeTimeFood</h1>
